--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 node_modules/
+
 .vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+./images/*
