--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
 node_modules/
-
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
-
-./images/*
+.vscode/
+images/*
